Fix bad overlap on some browser

--- a/css/home.scss
+++ b/css/home.scss
@@ -25,7 +25,7 @@ header.home {
 
   img {
     position: absolute;
-    top:100px;
+    top:105px;
     left:50%;
     margin-left: -202px;
   }
